--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 body {
     font-family: var(--font-base) !important;
 }
+/* comentario 2 */
 h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h3,.h4,.h5,.h6 {
     font-weight: 600;
