--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ img {
     border-radius: 0;
     padding: 10px 24px;
 }
-
+/* comentario 2 */
 .btn-brand {
     background-color: var(--c-brand) !important;
     border-color: var(--c-brand) !important;
